--- a/airbnb/css/style.css
+++ b/airbnb/css/style.css
@@ -60,3 +60,23 @@ nav ul{
     left:0;
 }
 
+.room{
+    padding: top 1rem;
+    padding-bottom:1rem;
+    border-bottom: 1px solid green;
+
+
+}
+
+
+.room--name{
+    font: size 1.5rem;
+    font-weight:bold;
+    font-family:Arial, 
+}
+
+.room--description{
+    font-size: 1rem;
+    font-family:Arial;
+    font-style:italic;
+}
